# UAP-MachineLearning-202110370311023

./: README.md  pyproject.toml
myvenv/Scripts/: activate  activate.bat
src/projectuap/: analisis_data.py  app.py  hasil_data.py  klasifikasi_data.py  upload_data.py
src/projectuap/model/: decision_tree_model.h5  logistic_regression_model.h5  neural_network_model.h5  scaler.h5
